# extensions

./: .gitignore  LICENSE  README.md  __init__.py  agents_plugin.py  approval_plugin.py  codex_commands_plugin.py  codex_config_plugin.py  codex_runner.py  commands_plugin.py  config_plugin.py  context_plugin.py  core_toolkit.py  dm_pairing_plugin.py  edit_plugin.py  hermes_runner.py  instruction_plugin.py  lsp_plugin.py  mcp_plugin.py  memory_plugin.py  openclaw_runner.py  opencode_runner.py  pyproject.toml  sandbox_plugin.py  security_policy_plugin.py  session_dag_plugin.py  skills_plugin.py  tool_search_plugin.py  tools_plugin.py  trajectory_plugin.py
codex_prompts/: __init__.py  approval_instructions.py  coding_guidelines.py  identity.py  sandbox_instructions.py  workflow.py
mcp_servers/: core_toolkit_server.py
prompts/: __init__.py  hermes.py  loader.py  opencode.py
prompts/codex/: __init__.py  codex.py
prompts/hermes/: __init__.py  base_prompt.md  context_files.md  execution_discipline.md  identity.md  memory_guidance.md  proactiveness.md  session_search.md  skills_guidance.md  style.md  tool_use_enforcement.md
prompts/openclaw/: __init__.py  behavior_contract.md  communication.md  docs.md  execution_bias.md  interaction_style.md  openclaw.py  safety.md  sandbox.md  security_policy.md  silent_replies.md  skills.md  subagent_delegation.md  tool_call_style.md  tooling.md  trajectory.md
prompts/opencode/: __init__.py  code_refs.md  coding_guidelines.md  identity.md  objectivity.md  style.md  task_management.md  tool_usage.md  workflow.md
(+3 files in other folders)
