[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extensions"
version = "0.1.0"
description = "Agent runners and MCP servers for the agent-ecosystem framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "agentcore>=0.1.0",
    "agentsys>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
